# SPF_Open

./: README.md
exam_to_pdf/: pyproject.toml  template.html
exam_to_pdf/src/: main.py  test.py
inzage_export/: README.md  bun.lockb  package.json
inzage_export/src/: index.ts
lib/: QTI.test.ts  QTI.ts  Text.ts  package.json  pnpm-lock.yaml
tao_export/: CHANGELOG.md  package-lock.json  package.json  pnpm-lock.yaml
tao_export/src/: App.svelte  app.css
tao_export/src/lib/: Settings.svelte  Tables.svelte  ZipInput.svelte  helper.ts
tao_export/src/template/: Question.svelte
tao_import/: index.html  package.json  pnpm-lock.yaml
tao_import/src/: App.svelte  app.css
tao_import/src/lib/: Input.svelte  Menu.svelte  Option.svelte  Test.svelte  csv.ts  helper.ts  reader.ts  store.ts
tao_import/src/lib/Input/: Download.svelte  DropZone.svelte  Input.svelte  LetterPicker.svelte  RadioInput.svelte
tao_import/src/lib/container/: Fieldset.svelte  OptionnalFieldset.svelte  OptionnalLetterPicker.svelte
tao_import/src/lib/helper/: question.ts  questions.ts
tao_import/src/lib/question/: PreviewTAO.svelte  question.ts  questions.ts
