[tool.poetry]
name = "exam-to-pdf"
version = "0.1.0"
description = ""
authors = ["Benoit-Welsch <benoitwelsch@protonmail.com>"]
readme = "README.md"
packages = [{include = "exam_to_pdf"}]

[tool.poetry.dependencies]
python = "^3.10"
weasyprint = "^57.1"
jinja2 = "^3.1.2"
pysimplegui = "^4.60.4"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
